--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    -webkit-font-smoothing: antialiased;
+    @apply dark:bg-stone-950 bg-stone-200 dark:text-stone-200 text-stone-950
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.container {
+@apply max-w-[1200px] mx-auto px-8
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+::-webkit-scrollbar {
+  @apply w-1 bg-transparent
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-zinc-900 w-1 rounded-md
 }
