--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,16 @@
 @layer base {
   body {
     -webkit-font-smoothing: antialiased;
-    @apply dark:bg-stone-950 bg-stone-300 dark:text-stone-200 text-stone-950
+    @apply dark:bg-stone-950 bg-stone-50 dark:text-stone-200 text-stone-950
   }
 }
 
 .container {
   @apply max-w-[960px] mx-auto px-8
+}
+
+.gradient-text {
+  @apply bg-gradient-to-r from-[#5551FF] to-[#FF8577] inline-block text-transparent bg-clip-text;
 }
 
 ::-webkit-scrollbar {
