--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   body {
     -webkit-font-smoothing: antialiased;
-    @apply bg-stone-950 text-stone-200
+    @apply dark:bg-stone-950 bg-stone-50 dark:text-stone-200 text-stone-950
   }
 }
 
@@ -13,10 +13,14 @@
   @apply max-w-[960px] mx-auto px-8
 }
 
+.gradient-text {
+  @apply bg-gradient-to-r from-[#5551FF] to-[#FF8577] inline-block text-transparent bg-clip-text;
+}
+
 ::-webkit-scrollbar {
   @apply w-1 bg-transparent
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-zinc-900 w-1 rounded-md
+  @apply dark:bg-zinc-900 bg-zinc-400 w-1 rounded-md
 }
